<resources>
    <string name="app_name">Beer Quiz</string>

    <!--questions-->
    <string name="question1">If possible, a cold beer should be served in a frosty mug for best taste.</string>
    <string name="question2">Which of the following instruments are commonly used in the process of brewing?</string>
    <string name="question3">A DIPA is what type of beer?</string>
    <string name="question4">Which of the following are not commonly used as ingredients in beer?</string>
    <string name="question5">What is the name of the reusable container that can be used to transport draft beer, usually by the half gallon?</string>
    <string name="question6">What microorganism is responsible for the fermentation of beer?</string>

    <!--answer options-->
    <string name="answer_1a">True</string>
    <string name="answer_1b">False</string>

    <string name="answer_2a">Lauter Tun</string>
    <string name="answer_2b">Kettle</string>
    <string name="answer_2c">Mash Tun</string>

    <string name="answer_3a">Double India Pale Ale</string>
    <string name="answer_3b">Dark India Pale Ale</string>
    <string name="answer_3c">Double Hopped Pale Ale</string>

    <string name="answer_4a">Molasses</string>
    <string name="answer_4b">Rose Hips</string>
    <string name="answer_4c">Barley</string>
</resources>
