<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.beerquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/Question"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/question1"
            tools:text="placeholder for question one" />

        <RadioGroup
            android:id="@+id/group_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                style="@style/MultipleChoice"
                android:id="@+id/answer_1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1a" />

            <RadioButton
                style="@style/MultipleChoice"
                android:id="@+id/answer_1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1b" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <CheckBox
            style="@style/MultipleChoice"
            android:id="@+id/answer_2a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2a" />

        <CheckBox
            style="@style/MultipleChoice"
            android:id="@+id/answer_2b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2b" />

        <CheckBox
            style="@style/MultipleChoice"
            android:id="@+id/answer_2c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2c" />

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                style="@style/MultipleChoice"
                android:id="@+id/answer_3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3a" />

            <RadioButton
                style="@style/MultipleChoice"
                android:id="@+id/answer_3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3b" />

            <RadioButton
                style="@style/MultipleChoice"
                android:id="@+id/answer_3c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3c" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <CheckBox
            style="@style/MultipleChoice"
            android:id="@+id/answer_4a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4a" />

        <CheckBox
            style="@style/MultipleChoice"
            android:id="@+id/answer_4b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4b" />

        <CheckBox
            style="@style/MultipleChoice"
            android:id="@+id/answer_4c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4c" />

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            tools:text="placeholder for question three" />

        <EditText
            android:id="@+id/answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            tools:text="placeholder for question three" />

        <EditText
            android:id="@+id/answer_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit Answers"
            android:onClick="gradeSubmission"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>